--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSite">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-item nav-link" href="index.html">Início</a>
+                        <a class="nav-item nav-link" href="index.html">Início,</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-item nav-link" href="#sobre-nos">Sobre nós</a>
