--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-item nav-link hvr-underline-from-center" href="index.html">Início</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-item nav-link hvr-underline-from-center" href="#sobre-nos">Sobre nós</a>
+            <a class="nav-item nav-link hvr-underline-from-center" href="#quemSomos">Quem somos</a>
           </li>
           <li class="nav-item">
             <a class="nav-item nav-link hvr-underline-from-center" href="#download">Download</a>
