--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 
     .bg-dark.scrolled {
-      background-color: #000 !important;
+      background-color: #1C1C1C!important;
     }
   </style>
 </head>
@@ -119,7 +119,7 @@
     <!-- Bloco um -->
     <div id="bloco-um" class="section container">
       <div class="row my-5">
-        <div class="col-sm-4">
+        <div class="col-sm-4 simbolos">
           <div class="card border-dark mb-3">
 
             <div class="card-body">
@@ -132,19 +132,12 @@
 
             <div class="card-body">
               <p class="text">
-                Mauris ultricies ante in rhoncus fringilla. Quisque efficitur purus sed leo rutrum, mattis ultricies ex
-                rutrum.
-                Etiam interdum elit vitae molestie sodales.
-                Suspendisse mollis magna dolor, dictum dictum massa hendrerit vel. In hac habitasse platea dictumst.
-                Mauris ultricies ante in rhoncus fringilla. Quisque efficitur purus sed leo rutrum, mattis ultricies ex
-                rutrum.
-                Etiam interdum elit vitae molestie sodales.
-                Suspendisse mollis magna dolor, dictum dictum massa hendrerit vel.
+                Os impactos resultantes do convivio contínuo com a arte se faz de muito proveitoso nos dias atuais, por meio da arte pode-se realizar feitos inimagináveis, isso devido a ligação emocional estabelecida entre artista e o apreciador. Somos convidados a mergulhar na vida do artista sempre que contemplarmos sua obra, por meio dela entendemos seus anseios, suas risadas, seus prazeres, dores e entre tantos outros sentimentos. A arte nos conecta como pessoas ao mesmo tempo que pode nos proporcionar um distanciamento de nossos temores. É um paradoxo inexplicável, os feitos da arte, e por meio dele somos chamados a desafiar nossa percepção
               </p>
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 simbolos">
           <div class="card border-dark mb-3">
             <div class="card-img-overlay">
             </div>
@@ -157,32 +150,29 @@
     </div>
     <div class="parallax-window" data-parallax="scroll" data-image-src="/img/teatro (3).jpeg">
       <div class="texto-parallax">
-        <h1>texto</h1>
+        <h3>A arte diz o indizível; exprime o inexprimível, traduz o intraduzível. </h3>
+        <h3>- Leonardo da Vinci</h3>
       </div>
     </div>
     <!--Sobre nós-->
     <section class="quemSomos _container" id="quemSomos">
       <h2> Quem somos</h2>
       <div class="fundador hvr-underline-from-center" style="padding: 5%;">
-        <h3 class="texto" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, exercitationem, rerum
-          corrupti perspiciatis placeat necessitatibus veritatis iure laudantium voluptates fugit distinctio facilis. Id
-          corrupti architecto at non nihil laboriosam iste.Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Dolor, exercitationem, rerum corrupti perspiciatis placeat necessitatibus veritatis iure laudantium voluptates
-          fugit distinctio facilis. Id corrupti architecto at non nihil laboriosam iste.</h3>
+        <h3 class="texto" style="text-align: justify;">A Open Stage trabalha para garantir que o artista possa ter um alcance maior em sua divulgação direcionando a mesma para o público ideal e certeiro, assim tornando suas publicações mais relevantes no ramo que melhor lhe cabe. Da mesma forma, oferecemos aos apreciadores um lugar aberto para acompanhar seu artista e conhecer novos, fazer novas amizades com base em seus gostos, encontrar eventos artísticos que lhe interessem. Ainda oferecemos a opção de contratação de artistas e vendas do seu produto por meio da plataforma.</h3>
       </div>
       <div class="fundador hvr-underline-from-center">
         <h4>Desenvolvedores</h4>
         <div class="naja">
-          <img src="img/naja.jpeg" class="najas hvr-bubble-float-bottom">
-          <h4 class="najas">naja 1</h4>
+          <img src="img/daniel.jpeg" class="najas hvr-bubble-float-bottom">
+          <h4 class="najas">Daniel</h4>
         </div>
         <div class="naja">
-          <img src="img/naja1.jpeg" class="najas hvr-bubble-float-bottom">
-          <h4 class="najas">naja 2</h4>
+          <img src="img/thew.jpeg" class="najas hvr-bubble-float-bottom">
+          <h4 class="najas">Matheus</h4>
         </div>
         <div class="naja">
-          <img src="img/naja.jpeg" class="najas hvr-bubble-float-bottom">
-          <h4 class="najas">naja 3</h4>
+          <img src="img/tih.jpeg" class="najas hvr-bubble-float-bottom">
+          <h4 class="najas">Tiago</h4>
         </div>
       </div>
     </section>
@@ -191,7 +181,8 @@
     <!--parallax-->
     <div class="parallax-window1" data-parallax="scroll" data-image-src="/img/bg3.png">
       <div class="texto-parallax">
-        <h1>texto</h1>
+        <h3>Em arte, procurar não significa nada. O que importa é encontrar.</h3>
+        <h3>- Pablo Picasso</h3>
       </div>
     </div>
     <!--fim do parallax-->
@@ -200,12 +191,12 @@
     <section class="quemSomos _container1" id="download">
       <h2> Download</h2>
       <div class="fundador">
-        <img src="img/download.png" class="my-5 hvr-bob">
+        <img src="img/app.png" class="my-5 hvr-bob" style="height: 580px;">
       </div>
       <div class="fundador">
         <div class="baixar">
-          <a href="" class="hvr-grow-shadow"><img src="img/downloadandroid.png" class="img-fluid" /></a>
-          <a href="" class="hvr-grow-shadow"><img src="img/downloadapple.png" class="img-fluid mt-3" /></a>
+          <a href="" class="hvr-grow-shadow"><img src="img/downloadandroid.png" class="img-fluid" style="height: 100px" width="290px"/></a>
+          <a href="" class="hvr-grow-shadow"><img src="img/downloadapple.png" class="img-fluid mt-3" style="height: 100px;" /></a>
         </div>
 
       </div>
@@ -215,7 +206,8 @@
     <!--parallax-->
     <div class="parallax-window2" data-parallax="scroll" data-image-src="/img/bg3.png">
       <div class="texto-parallax">
-        <h1>texto</h1>
+        <h3>A arte é o espelho e a crônica da sua época. </h3>
+        <h3>- William Shakespeare</h3>
       </div>
     </div>
     <!--fim do parallax-->
@@ -229,20 +221,14 @@
             <h5 class="mb-0">
               <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
                 aria-expanded="true" aria-controls="collapseOne">
-                Grupo de itens colapsável #1
+                Por que migrar para a Open Stage?
               </button>
             </h5>
           </div>
 
           <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-              moon officia aute, non alemanha 0 x 2 coreia do sul cupidatat skateboard dolor brunch. Food truck quinoa
-              nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin
-              coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-              nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-              farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore
-              sustainable VHS.
+              A Open Stage visa direcionar o conteúdo certo para a pessoa certa objetivando alcançar um número mais assertivo sem o risco de que o conteúdo acabe sendo soterrado na vastidão de conteúdos existentes.
             </div>
           </div>
         </div>
@@ -251,18 +237,13 @@
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
                 aria-expanded="false" aria-controls="collapseTwo">
-                Grupo de itens colapsável #2
+                Como é gerada a renda?
               </button>
             </h5>
           </div>
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-              moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-              Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-              shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-              proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim
-              aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              A plataforma está focada em seu crescimento artístico, desta forma ela se dispõe a oferecer a contratação de seus serviços direcionando 75% do lucro ao artista, isso vale para as feiras-semanais.
             </div>
           </div>
         </div>
@@ -271,18 +252,13 @@
             <h5 class="mb-0">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
                 aria-expanded="false" aria-controls="collapseThree">
-                Grupo de itens colapsável #3
+                Um apreciador pode se tornar um artista?
               </button>
             </h5>
           </div>
           <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
             <div class="card-body">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
-              moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod.
-              Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda
-              shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-              proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim
-              aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              Na arte qualquer coisa é possível, por isso sim, um apreciador pode se tornar um artista no momento que quiser e pode contar com o apoio da plataforma para se estabelecer no mercado.
             </div>
           </div>
         </div>
@@ -292,7 +268,8 @@
 <!--parallax-->
 <div class="parallax-window3" data-parallax="scroll" data-image-src="/img/bg3.png">
   <div class="texto-parallax">
-    <h1>texto</h1>
+    <h3>A Arte é uma forma de expressar o que cada um sente no íntimo</h3>
+    <h3> - Michael Brugger</h3>
   </div>
 </div>
 <!--fim do parallax-->
